--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <div id="stage2" style="display:none; margin-top:16px;">
-      <p class="small">网络名称（CMCC-5G）：<strong id="ssidText">Your_SSID_here</strong></p>
+      <p class="small">网络名称：<strong id="ssidText">CMCC-5G</strong></p>
       <p>Wi-Fi 密码：</p>
       <div style="display:flex; align-items:center; gap:12px;">
         <div class="secret" id="pwText">***hidden***</div>
