--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <script>
     // ====== 在这里设置你的SSID和密码 ======
-    const WIFI_SSID = "Your_SSID_here";            // <- 修改为你的网络名
+    const WIFI_SSID = "CMCC-5G";            // <- 修改为你的网络名
     const WIFI_PASSWORD = "*#06#6281144";         // <- 这是你要显示的密码
     // ======================================
 
